2003-09-30  David N. Welton  <davidw@dedasys.com>

	* src/rivetParser.c (Rivet_GetRivetFile): Add ref counting for
	'inbuf'.

	* src/mod_rivet.c (Rivet_ParseExecFile): Manage ref count for
	outbuf better.
	(Rivet_SendContent): Clean up 'info script' code.
	(Rivet_InitTclStuff): Rework 'if' to eliminate double assignment.

	* src/TclWebapache.c (TclWeb_GetEnvVars): Add ref counting for
	envvar.
	(TclWeb_GetHeaderVars): Fix ref counting for headersvar.

	* tests/headers.test: Added test for load_headers.

	* src/apache_request.h: Updates from httpd-apreq.

	* src/apache_request.c: Updates from httpd-apreq.

2003-09-29  David N. Welton  <davidw@dedasys.com>

	* rivet/packages/commserver/server.tcl: Exit 1 on failure.

	* rivet/packages/commserver/commserver.tcl: Check to make sure the
	server is really running before returning from commserver::start.

	* rivet/packages/simpledb/simpledb.tcl: Added 'simpledb', although
	it's not ready for production use.

	* src/mod_rivet.c (Rivet_ChildInit): If we don't have separate
	virtual servers, we only need to run the ChildInitScript once.  If
	we do have interpreters for each virtual server, each one gets to
	run the script.

	* doc/rivet.ru.xml: Big update of the Russian translation by
	Dmitry the Zuryanovich <dtz@XEPb.ru>.  Thanks!

2003-09-26  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c: Spelling check: seperate->separate.

2003-09-24  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Mention the global command in the 'internals'
	section.

2003-08-30  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Added var_qs and var_post cmdsynopsis's.

2003-08-29  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Use refentry and sub-elements instead of
	variablelist.  This is more correct.

	* doc/norefchunk.xsl: New file - handle refentries without making
	them new files.

	* doc/rivet.xsl: Scratch the last changes and go with refentry's